# hackaton

./: .gitignore  CONTEXT.md  SPEC.md  onboarding-program.json  package-lock.json  package.json
client/: package-lock.json  package.json  tsconfig.tsbuildinfo
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/dashboard/: page.tsx
client/src/app/onboard/: page.tsx
client/src/app/program/: page.tsx
client/src/components/: ActionBar.tsx  ChatPanel.tsx  DropZone.tsx  FlowCard.tsx  GitHubForm.tsx  LogPanel.tsx  NavBar.tsx  StatusBadge.tsx  ThinkingPanel.tsx
client/src/components/ui/: aurora-background.tsx
client/src/hooks/: useSSE.ts
copilot/: .gitignore  pyproject.toml  smoke_test.py  smoke_test_auth.py  test_observer.py
copilot/.claude/: .mcp.json
copilot/flows/: create-first-account.json  taskflow-onboarding.json
copilot/src/: app.py  auth_helper.py  config.py  engine.py  flow_loader.py  listeners.js  observer.py
copilot/static/: index.html
demo-app/: dashboard.html  index.html  new-project.html  package-lock.json  package.json  project.html  settings.html  team.html
server/: agent.js  flowAnalyzer.js  index.js  portDetector.js  runner.js  sse.js  store.js
server/public/: sherpa-widget.js
server/routes/: control.js  github.js  onboard.js  program.js  upload.js
