[project]
name = "copilot-agent"
version = "0.1.0"
description = "Copilot Agent - Universal Training Flow Guide"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-code-sdk>=0.0.25",
    "fastapi>=0.115",
    "playwright>=1.58.0",
    "uvicorn>=0.34",
    "websockets>=14.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
